<resources>
    <string name="app_name">Buyer Calculator</string>
    <string name="action_kilogram">Килограмм</string>
    <string name="action_liter">Литр</string>
    <string name="action_unit">Единицу</string>

    <string name="compare_price">Сравнить цену за %s</string>

    <string name="kilogram">килограмм</string>
    <string name="kilogram_alias">кг</string>
    <string name="liter">литр</string>
    <string name="liter_alias">л</string>
    <string name="unit">единицу</string>
    <string name="unit_alias">шт</string>

    <string name="product_1_title">Товар 1</string>
    <string name="product_2_title">Товар 2</string>
    <string name="product_result">%.2f ₽/%s</string>

    <string name="price_hint">Цена</string>
    <string name="gram_hint">Грамм</string>
    <string name="liter_hint">Миллилитр</string>
    <string name="unit_hint">Штук</string>
</resources>
